examples/test/testpolicy11544.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11544
  namespace: namespace254
spec:
  podSelector:
    matchLabels:
      key43: value33
      key33: value24
      key4: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value44
          key38: value0
          key18: value26
      podSelector:
        matchLabels:
          key19: value28
          key21: value32
